# nonLinearity

./: .coveragerc  .gitignore  CMakeLists.txt  Makefile  README.md  cli.py  config.ini  config_example.ini  correction.py  correctionBias.ipynb  corrector.py  explorEEG.ipynb  gaussianize.ipynb  iEEG_preproc.ipynb  innovationOrthogonalization.py  launcher.py  launcher.sh  mkdocs.yml  nonlinearestimator.py  nonlinearestimator_benchmark.py  nonlinearity.py  options.ini  pyproject.toml  recomputeCorrelations.ipynb  setup.sh  summary.ipynb  support.py  testingTheLimit.ipynb  toC.py
auxiliary_data/: AAL_90regions.csv  electrode_positions.csv  electrode_positions2.csv  interesting_electrodes.json  nonlinear_regions.npy  selected_linear.json  selected_pairs.json  selected_subjects.json  spikesClustering.txt
cpp/: CMakeLists.txt  pmi.cpp  pmi.hpp
data/: config_example.ini  localsettings.ini  other_NLE.py
docs/: index.md
docs/api/: corrector.md  innovationOrtogonalisation.md  intro.md  nonlinearestimator.md  support.md
lib/: pmi.hpp
mienc/: __init__.py  cli.py  corrector.py  innovationOrthogonalization.py  nonlinearestimator.py  support.py
notebooks/: 3dplot.py  BLP_shadow_maker.py  betterSelect_fMRI.ipynb  checkBLP.ipynb  checkBias.ipynb  checkCircles.ipynb  checkDipoles.ipynb  checkEEGstates.ipynb  checkElectrodeBLP_shadow.ipynb  checkSpikes.ipynb  checkSpikes2.py  check_metadata_LEMON.ipynb  checkfMRIstates.ipynb  cleanLoc.ipynb  clear_all_outputs.sh  colorblindnessCool.py  colorblindness_tools.ipynb  errorEstimation.ipynb  extractPieces.py  fixprojections.ipynb  iEEG_preproc.ipynb  localsettings.ini  mi_estimates.ipynb  prepareLEMON.ipynb  remove_spiky_epochs.ipynb  s00_setting_up.sh  s01_preprocessing_data.ipynb  s01a_V2V_fMRI_preprocessing.m  s02_analysis.ipynb  s03_figures.ipynb  s03a_localisation.py  significant_localisation.ipynb  structure.ipynb  summary.ipynb  summary_def.ipynb  test_retest.ipynb  unosueffe.ipynb  visualise_diff.ipynb
scripts/: s01_preprocessing_data.ipynb  s01a_V2V_fMRI_preprocessing.m  s02_analysis.ipynb  s03_figures.ipynb  s03a_localisation.py
src/: pmi.cpp  provaccia.cpp
src/mienc/: __init__.py  bindings.py  corrector.py  estimators.py  innovationOrthogonalization.py  nonlinearestimator.py  statistics.py  support.py
tests/: test_adependencies.py  test_advanced.py  test_basic.py
tests/data/: test_config.ini
